apps/nodejs18-example/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs18-example
  labels:
    app: nodejs18-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs18-example
  template:
    metadata:
      labels:
        app: nodejs18-example
    spec:
      containers:
        - name: nodejs18-example
          image: ghcr.io/steadweb/node18-example:v0.2.0-rc3-rc2-rc1
          ports:
            - containerPort: 80
