apps/nodejs18-example/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs18-example
spec:
  selector:
    app: nodejs18-example
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
