apps/nodejs18-example/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs18-example
spec:
  ingressClassName: traefik
  rules:
    - host: nodejs18example.f1arcade.steadweb.com
      http:
        paths:
          - backend:
              service:
                name: nodejs18-example
                port:
                  number: 80
            path: /
            pathType: Prefix
